# vertex-linked-signer-eip712

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  vite.config.js
assets/: main-20a2a271.js  main-2bf74546.js  main-8ba92e3f.js  main-e1937138.js
src/: lib.rs
web/: App.jsx  main.jsx
web/components/: EIP712SignatureComponent.jsx
