[package]
name = "eip712-signer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
wasm-bindgen = "0.2"
ethers = { version = "2.0", default-features = false, features = [
    "legacy",
    "abigen",
    "eip712",
] }
hex = "0.4"
getrandom = { version = "0.2", features = ["js"] }
serde_json = "1.0.124"
serde = "1.0.206"
serde-wasm-bindgen = "0.6.5"
[dependencies.web-sys]
version = "0.3"
features = ["console"]
